<resources>
    <string name="app_name">Pujan Samagri</string>
    <string name="shiv_image_as_design_in_home_screen">Shiv Image as design in home screen</string>
    <string name="new_parcha">NEW PARCHA</string>
    <string name="select_parcha">SELECT PARCHA</string>
    <string name="textview">TextView</string>
    <string name="add">Add</string>
    <string name="next">NEXT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_item">Enter Item</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="ui_leave_group">ui leave group at the bottom of background</string>
    <string name="center_horizontal_leaf">center horizontal leaf</string>
    <string name="center_horizontal_shap">center horizontal shap</string>
    <string name="ui_bottom_leaf">ui bottom leaf</string>
    <string name="ui_bottom_end_shap">ui bottom end shap</string>
    <string name="ui_top_end_leaf">ui top end leaf</string>
    <string name="ui_top_end_shap">ui top end shap</string>

    <string-array name="quantity_notation">
        <item>नग</item>
        <item>किलो</item>
        <item>ग्राम</item>
        <item>रुपये</item>
        <item>मीटर</item>
        <item>पैकिट</item>
        <item> </item>
    </string-array>


    <string name="sundarkand">सुंदरकांड</string>
    <string name="ramayan">रामायण</string>
    <string name="mata">माता</string>
    <string name="havan">हवन</string>
    <string name="jugat">जुगत</string>
    <string name="pata">पटा</string>
    <string name="ekadashi">एकादशी</string>
    <string name="rishi_panchmi">ऋषि पंचमी</string>
    <string name="satyanarayan">सत्यनारायण</string>

    <!-- Strings used for header footer activity-->
    <string name="title">Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_name">Enter Name</string>
    <string name="phone_no">Phone No</string>
    <string name="name">Name</string>
    <string name="parcha_name">Parcha Name</string>
    <string name="save">SAVE</string>
    <string name="unit">Unit</string>
    <string name="h">H</string>
    <string name="header">Header</string>
    <string name="footer">Footer</string>
    <string name="content">Content</string>
    <string name="_0">0</string>
    <string name="enter_phone_no">Enter Phone No.</string>
    <string name="add_item">Add Item</string>
    <string name="testing_data">name - phone</string>
    <string name="search_item">Search Item</string>
    <string name="search_parche">Search Parche</string>
    <string name="download_pdf">Download Pdf</string>
    <string name="share_pdf">Share Pdf</string>
    <string name="save_scase">Save</string>
    <string name="edit_content">edit content</string>
    <string name="edit_title_name_phone">edit title name phone</string>
    <string name="undo">undo</string>
    <string name="redo">redo</string>
    <string name="backgroun_image">Backgroun Image</string>
    <string name="back">back</string>

</resources>