<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_15sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_15sdp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:text="@string/title"
            android:textColor="@color/davy_grey_light_hint_x11_gray"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:hint="@string/enter_title"
            android:maxEms="1"
            android:textColorHint="@color/davy_grey_light_hint_x11_gray"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/vivid_auburn_x11_grey"
            app:hintTextColor="@color/davy_grey_light_hint_x11_gray"
            app:startIconDrawable="@drawable/icon_title"
            app:startIconTint="@color/davy_grey_light_hint_x11_gray">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/title_edtv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:inputType="textAutoComplete"
                android:maxLength="25"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_10sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/name"
            android:textColor="@color/davy_grey_light_hint_x11_gray"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:hint="@string/enter_name"
            android:textColorHint="@color/davy_grey_light_hint_x11_gray"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/vivid_auburn_x11_grey"
            app:hintTextColor="@color/davy_grey_light_hint_x11_gray"
            app:startIconDrawable="@drawable/icon_person"
            app:startIconTint="@color/davy_grey_light_hint_x11_gray">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/name_edtv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:inputType="textAutoCorrect"
                android:maxLength="25"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_10sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/phone_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/phone_no"
            android:textColor="@color/davy_grey_light_hint_x11_gray"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:hint="@string/enter_phone_no"
            android:textColorHint="@color/davy_grey_light_hint_x11_gray"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/vivid_auburn_x11_grey"
            app:hintTextColor="@color/davy_grey_light_hint_x11_gray"
            app:startIconDrawable="@drawable/icon_call"
            app:startIconTint="@color/davy_grey_light_hint_x11_gray">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/phone_no_edtv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:inputType="phone"
                android:maxLength="25"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_10sdp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:backgroundTint="@color/matte_black"
            android:paddingHorizontal="@dimen/_60sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:cornerRadius="@dimen/_5sdp" />
    </LinearLayout>


</androidx.cardview.widget.CardView>