<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/title"
            android:textColor="@color/davy_grey_light_hint_x11_gray"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_item"
            android:textColorHint="@color/davy_grey_light_hint_x11_gray"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/vivid_auburn_x11_grey"
            app:hintTextColor="@color/davy_grey_light_hint_x11_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/item_edtv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:inputType="textAutoCorrect"
                android:maxLength="25"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_30sdp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/name"
            android:textColor="@color/davy_grey_light_hint_x11_gray"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout1"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout1"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintVertical_bias="0.93" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_quantity"
            android:textColorHint="@color/davy_grey_light_hint_x11_gray"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/vivid_auburn_x11_grey"
            app:hintTextColor="@color/davy_grey_light_hint_x11_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintVertical_bias="0.13">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/quantity_edtv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_30sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/unit_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/unit"
                android:textColor="@color/davy_grey_light_hint_x11_gray"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/quantity_value_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/vivid_auburn_matte_black"
            android:paddingHorizontal="@dimen/_50sdp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:cornerRadius="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout1"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout1"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout1" />


    </LinearLayout>


</androidx.cardview.widget.CardView>