<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewParche">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:background="@drawable/corner_header_footer"
        android:backgroundTint="@color/jacarta_matte_black">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/jacarta_matte_black"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways"
            app:toolbarId="@+id/toolbar">

            <LinearLayout
                android:id="@+id/searchbar_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/card_boreder"
                android:backgroundTint="@color/white_x11_grey"
                android:drawableStart="@drawable/icon_language"
                android:drawablePadding="@dimen/_15sdp"
                android:fitsSystemWindows="true"
                android:paddingHorizontal="@dimen/_10sdp"
                app:elevation="0dp"
                app:layout_collapseMode="parallax">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:theme="@style/ThemeOverlay.AppCompat.Light"
                    app:iconifiedByDefault="false"
                    app:queryHint="@string/search_item" />

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageButton
                        android:id="@+id/back_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/ripple_icon_background"
                        android:contentDescription="@string/back"
                        android:src="@drawable/icon_arrow_back"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center_horizontal"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sdp" />


                    <ImageButton
                        android:id="@+id/next_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/ripple_icon_background"
                        android:contentDescription="@string/next"
                        android:src="@drawable/icon_next_start"
                        android:visibility="invisible"
                        app:tint="@color/white" />

                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/samagri_list_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_new_item_floating_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:backgroundTint="@color/jacarta_matte_black"
        android:contentDescription="@string/add_item"
        android:fitsSystemWindows="true"
        android:src="@drawable/icon_draw"
        app:elevation="@dimen/_24sdp"
        app:fabSize="normal"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        app:maxImageSize="@dimen/_25sdp"
        app:rippleColor="@color/x11_gray"
        app:tint="@android:color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>