<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Home">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/backgroun_image"
        android:src="@drawable/back_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/backgroun_image"
        android:src="@drawable/back_home_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:elevation="2dp"
        app:cardCornerRadius="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/newparcha_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:drawableEnd="@drawable/icon_add"
                android:drawableTint="@color/regal_blue_davy_grey"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:text="@string/new_parcha"
                android:textColor="@color/regal_blue_x11_grey"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/selectparcha_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/regal_blue_davy_matte_black"
                android:paddingStart="@dimen/_20sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:text="@string/select_parcha"
                android:textColor="@color/white_x11_grey"
                android:textSize="@dimen/_16sdp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/shiv_image_as_design_in_home_screen"
        android:elevation="2dp"
        android:src="@drawable/shiv"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />


</androidx.constraintlayout.widget.ConstraintLayout>